# hypa-thymesia-video-query

./: .gitignore  PROJECT_CONTEXT.md  README.md  app.py  pyproject.toml  ui.py  video_query.py
src/: __init__.py
src/audio/: audio_processor.py
src/embeddings/: __init__.py  clip_embedder.py  transcript_embedder.py
src/models/: __init__.py  video_query.py
src/storage/: __init__.py  database.py  transcript_database.py
src/ui/: __init__.py  gradio_ui.py
src/video/: __init__.py  processor.py
